# redops-orchestrator-v2

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  MANIFEST.in  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
api/: main.py
api/routers/: dirbusting.py  knowledge.py  lfi.py  nmap.py  orchestrator.py  vuln.py  waf.py  webrecon.py
apps/dirbusting/: profiles.py  service.py
apps/lfi/: detection.py  profiles.py  service.py
apps/nmap/: parser.py  profiles.py  service.py
apps/orchestrator/: infra-standard.json  service.py  web-first.json
apps/vuln/: enrich_searchsploit.py  mitre_map.py  profiles.py  service.py
apps/waf/: service.py
apps/webrecon/: profiles.py  service.py  signals.py
core/: auth.py  config.py  db.py  diff.py  events.py  exports.py  jobs.py  logging.py  models.py  risk.py  sanitize.py  shell.py
data/knowledge/: oscp_tips.json
data/profiles/: README.md
infra/: Dockerfile  docker-compose.yml  prometheus.yml
migrations/: env.py
migrations/versions/: 0001_init.py
tests/e2e/: test_nmap_localhost.py
tests/unit/: test_diff.py  test_lfi_detection.py  test_nmap_parser.py  test_nmap_profiles.py  test_nmap_stream.py  test_profiles.py  test_risk.py  test_sanitize.py
webui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
webui/src/: App.vue  main.css  main.js
webui/src/api/: index.js
webui/src/components/: JobStatus.vue  ModuleCard.vue  ModuleCards.vue  ScanForm.vue  SidebarItem.vue  Toasts.vue  TopBar.vue
webui/src/components/ui/: Badge.vue  Button.vue  Card.vue  Spinner.vue  Toast.vue
webui/src/composables/: useJob.js  useToasts.ts
webui/src/layouts/: AppLayout.vue  AppShell.vue
webui/src/lib/: api.ts  socket.js
webui/src/pages/: Dashboard.vue  Nmap.vue  Settings.vue  Vuln.vue  WebRecon.vue
webui/src/router/: index.js  index.ts
webui/src/store/: app.js
webui/src/views/: Dashboard.vue  Nmap.vue  Orchestrator.vue  Settings.vue  Vuln.vue  WebRecon.vue
