[project]
name = "redops-orchestrator-v2"
version = "0.1.0"
description = "RedOps API-first orchestrator"
readme = "README.md"
authors = [{ name = "RedOps" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings",
  "python-dotenv",
  "redis",
  "rq",
  "sqlalchemy>=2",
  "alembic",
  "httpx",
  "lxml",
  "xmltodict",
  "structlog",
  "prometheus-fastapi-instrumentator",
  "prometheus-client",
  "slowapi",
  "weasyprint",
  "pyyaml",
  "markdown2",
  "dnspython",
  "validators",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-requests",
  "types-PyYAML",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# NEW
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "apps*", "core*"]
exclude = ["data*", "infra*", "migrations*", "tests*", "webui*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"api" = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.xml", "**/*.txt", "**/*.j2", "**/*.html"]
"apps" = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.xml", "**/*.txt", "**/*.j2"]
"core" = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.txt"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
